# seeder_GO2

./: .gitignore  README.md
unitree_sdk_ws/: CMakeLists.txt  body_height.cpp  connect_dog.sh  esp_sequence.cpp  fast_planting.cpp  fast_planting_no_esp.cpp  final_movement.cpp  final_movement_v2.cpp  final_movement_v3.cpp  final_with_ll_v1.cpp  final_with_ll_v2.cpp  full_planting_sequence.cpp  low_level_poke.cpp  remote_emulator.cpp  run_planting.py  test1_lowlevel.cpp  test1_real.cpp  test2_real.cpp  test3_real.cpp  test4_real.cpp  test_esp.cpp  try.cpp  try3.cpp  try4.cpp
unitree_ws/: dds.xml  filter_config.yaml  node_info.txt
unitree_ws/src/esp_bridge/: esp_bridge.py
unitree_ws/src/go2_description/xacro/: ros2_control.xacro
