cmake_minimum_required(VERSION 3.10)
project(Go2CustomProject)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(unitree_sdk2 REQUIRED)

add_executable(final_movement final_movement.cpp)
target_link_libraries(final_movement unitree_sdk2)

add_executable(final_movement_v2 final_movement_v2.cpp)
target_link_libraries(final_movement_v2 unitree_sdk2)

add_executable(final_movement_v3 final_movement_v3.cpp)
target_link_libraries(final_movement_v3 unitree_sdk2)

add_executable(test_esp test_esp.cpp)
target_link_libraries(test_esp unitree_sdk2)

add_executable(final_with_ll_v1 final_with_ll_v1.cpp)
target_link_libraries(final_with_ll_v1 unitree_sdk2)

add_executable(final_with_ll_v2 final_with_ll_v2.cpp)
target_link_libraries(final_with_ll_v2 unitree_sdk2)

add_executable(low_level_poke low_level_poke.cpp)
target_link_libraries(low_level_poke unitree_sdk2)

add_executable(remote_emulator remote_emulator.cpp)
target_link_libraries(remote_emulator unitree_sdk2)

add_executable(fast_planting fast_planting.cpp)
target_link_libraries(fast_planting unitree_sdk2)

add_executable(fast_planting_no_esp fast_planting_no_esp.cpp)
target_link_libraries(fast_planting_no_esp unitree_sdk2)